---
config:
  theme: dark
---
erDiagram
  Cliente {
    int id_cliente
    string nome
    string telefone
    string endereco
  }

  Forma_Pagamento["Forma Pagamento"]  {
    int id_cartao
    string numero_cartao
    string nome_titular
    date vencimento
    string cvv
  }

  Estabelecimento {
    int id_estabelecimento
    string nome
    string endereco
  }

  Prato {
    int id_prato
    string nome
    text ingredientes
  }

  Pedido {
    int id_pedido
    enum status
    date data
  }

  Oferta {
    int id_oferta
    date data
    decimal valor
    int quantidade
  }

  Carrinho {
    int id_carrinho
  }

  Cliente }|--o{ Forma_Pagamento : cadastra
  Oferta }o--|| Prato : oferta
  Pedido }o--|{ Oferta : "contém"
  Carrinho }o--o{ Oferta : "contém"
  Cliente ||--|| Carrinho : possui
  Cliente ||--o{ Pedido : realiza
  Estabelecimento ||--o{ Pedido : recebe
  Estabelecimento ||--|{ Prato : prepara
  Carrinho }o--|| Estabelecimento : vinculado